--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,29 +2,24 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.restourantapp">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-
-
-
-
-
-
-
-
         android:theme="@style/AppTheme">
-        <activity android:name=".FoodList"></activity>
+        <activity android:name=".RestaurantsList"></activity>
+        <activity android:name=".UserProfile" />
+        <activity android:name=".FoodList" />
         <activity android:name=".FoodDetails" />
         <activity android:name=".SignUpActivity" />
-        <activity android:name=".UserProfile">
-
+        <activity
+            android:name=".LoginActivity"
+            android:theme="@style/FullScreen">
             <intent-filter>
-
-
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
