--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,20 +20,34 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets {
+        main {
+            assets {
+                srcDirs 'src/main/assets', 'src/main/assets/2'
+            }
+        }
+    }
 
 }
 
 dependencies {
+
+    implementation 'com.google.android.libraries.places:places:2.2.0'
+    implementation 'com.github.andremion:counterfab:1.0.1'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.firebaseui:firebase-ui-database:1.2.0'
-    implementation 'com.google.firebase:firebase-database:19.3.0'
-    implementation 'com.google.firebase:firebase-auth:19.3.1'
+    implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
+    implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
+    implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.firebase:firebase-database:16.0.4'
+    implementation 'com.google.firebase:firebase-auth:16.0.5'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
 
